--- a/views/signup.html
+++ b/views/signup.html
@@ -1,5 +1,15 @@
-<html>
+<!DOCTYPE html>
+
+<html lang = "en">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title> Sign up </title>
+
+    <!-- Latest compiled and minified CSS of Bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <body>
         <h1> Welcome </h1>
