--- a/views/signup.html
+++ b/views/signup.html
@@ -7,15 +7,58 @@
 
     <title> Sign up </title>
 
+    <style type="text/css">
+      input[type=text] {
+        width : 50%;
+      }
+      input[type=password] {
+        width : 50%;
+      }
+      label {
+        padding : 5px;
+      }
+      .label {text-align: right}
+      .error {color: red}
+    </style>
+
     <!-- Latest compiled and minified CSS of Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
 
     <body>
-        <h1> Welcome </h1>
-        <p>
-            Here is place for sign up
-        </p>
+        <nav class = "navbar navbar-inverse">
+            <div class = "container">
+
+                <div class = "navbar-header">
+                    <a class="navbar-brand" href="#">ROZ Forum</a>
+                </div>
+
+                <ul class = "nav navbar-nav">
+                    <li class="active"><a href="/">Home</a></li>
+                </ul>
+
+            </div>
+        </nav>
+        <form method = "post" style = "padding : 5px; margin-left : 5%">
+            <h2>Sign up</h2>
+
+            <label for = "inputUserName">Username</label>
+            <input type = "text" id = "inputUserName" class = "form-control" name = "username" placeholder="Username" required autofocus>
+
+            <label for = "inputPassword">Password</label>
+            <input type = "password" id = "inputPassword" class = "form-control" name = "password" placeholder="Password" required>
+
+            <label for = "verifyPassword">Verify Password</label>
+            <input type = "password" id = "verifyPassword" class = "form-control" name = "verify" placeholder="Verify Password" required>
+
+            <label for = "inputEmail">Email</label>
+            <input type = "text" id = "inputEmail" class = "form-control" name = "email" placeholder="Your email" required>
+
+
+            <button type = "button" class = "btn btn-primary" type = "submit" style = "margin-top: 1%">Sign up</button>
+            <a href = "/login.html" class = "btn btn-primary" style = "margin-top: 1%">Or already have account?</a>
+
+        </form>
     </body>
 
 </html>
