--- a/views/main.html
+++ b/views/main.html
@@ -1,7 +1,46 @@
-<html>
+<!DOCTYPE html>
+<html lang = "en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title> ROZ Forum </title>
+
+    <!-- Latest compiled and minified CSS of Bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/main.css">
+
+  </head>
+
   <body>
-      <p>
-          This is main page
-      </p>
+    <nav class = "navbar navbar-inverse">
+        <div class = "container">
+
+            <div class = "navbar-header">
+                <a class="navbar-brand" href="#">ROZ Forum</a>
+            </div>
+
+            <ul class = "nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+            </ul>
+
+            <!-- TODO -->
+            <!-- I will set 2 status of page when login and not login -->
+            <a class="navbar-brand" href="#" style = "margin-left: 1%">You are not logged in!</a>
+
+            <div id = "navbar" class = "navbar-right">
+                <ul class = "nav navbar-nav">
+                  <li><a href="/login">Login</a></li>
+                  <li><a href="/signup">Sign Up</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </nav>
+
+
+
   </body>
+
 </html>
