upgrade redirect link

--- a/views/signup.html
+++ b/views/signup.html
@@ -39,7 +39,9 @@
 
             </div>
         </nav>
-        <form method = "post" style = "padding : 5px; margin-left : 5%">
+
+        <div class = "container">
+          <form method = "post" style = "padding : 5px; margin-left : 5%">
             <h2>Sign up</h2>
 
             <label for = "inputUserName">Username</label>
@@ -56,9 +58,10 @@
 
 
             <button type = "button" class = "btn btn-primary" type = "submit" style = "margin-top: 1%">Sign up</button>
-            <a href = "/login.html" class = "btn btn-primary" style = "margin-top: 1%">Or already have account?</a>
+            <a href = "/login" class = "btn btn-primary" style = "margin-top: 1%">Or already have account?</a>
 
-        </form>
+          </form>
+        </div>
     </body>
 
 </html>
