--- a/views/login.html
+++ b/views/login.html
@@ -55,7 +55,7 @@
             </div>
 
             <button type = "button" class = "btn btn-primary" type = "submit" style = "margin-top: 1%">Login</button>
-            <a href = "/signup.html" class = "btn btn-primary" style = "margin-top: 1%">Don't have account?</a>
+            <a href = "/signup" class = "btn btn-primary" style = "margin-top: 1%">Don't have account?</a>
 
         </form>
     </body>
