--- a/views/welcome.html
+++ b/views/welcome.html
@@ -41,11 +41,11 @@
               </li>
               <li>
                 <span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
-                <a href="/logout.html">Logout</a>
+                <a href="/logout">Logout</a>
               </li>
               <li>
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                <a href="/newpost.html">Create a New Post</a>
+                <a href="/newpost">Create a New Post</a>
               </li>
             </ul>
 
