Catch POST method in login/signup page

--- a/views/login.html
+++ b/views/login.html
@@ -54,7 +54,7 @@
               </label>
             </div>
 
-            <button type = "button" class = "btn btn-primary" type = "submit" style = "margin-top: 1%">Login</button>
+            <button class = "btn btn-primary" type = "submit" style = "margin-top: 1%">Login</button>
             <a href = "/signup" class = "btn btn-primary" style = "margin-top: 1%">Don't have account?</a>
 
         </form>
