--- a/views/signup.html
+++ b/views/signup.html
@@ -57,7 +57,7 @@
             <input type = "text" id = "inputEmail" class = "form-control" name = "email" placeholder="Your email" required>
 
 
-            <button type = "button" class = "btn btn-primary" type = "submit" style = "margin-top: 1%">Sign up</button>
+            <button class = "btn btn-primary" type = "submit" style = "margin-top: 1%">Sign up</button>
             <a href = "/login" class = "btn btn-primary" style = "margin-top: 1%">Or already have account?</a>
 
           </form>
