--- a/views/login.html
+++ b/views/login.html
@@ -40,7 +40,7 @@
             </div>
         </nav>
         <form method = "post" style = "padding : 5px; margin-left : 5%">
-            <h2>Let's login</h2>
+            <h2>Login</h2>
 
             <label for = "inputUserName">Username</label>
             <input type = "text" id = "inputUserName" class = "form-control" name = "username" placeholder="Username" required autofocus>
