--- a/views/welcome.html
+++ b/views/welcome.html
@@ -30,7 +30,7 @@
       <div class = "container">
 
         <div class = "row">
-            <h1><b> Welcome </b></h1>
+            <h1><b> Welcome you to joining with us </b></h1>
 
             <hr />
 
@@ -45,7 +45,7 @@
               </li>
               <li>
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                <a href="/newpost">Create a New Post</a>
+                <a href="/newpost">Create a First Post</a>
               </li>
             </ul>
 
