--- a/views/welcome.html
+++ b/views/welcome.html
@@ -37,7 +37,7 @@
             <ul>
               <li>
                 <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                <a href="/">Home</a>
+                <a href="/main">Home</a>
               </li>
               <li>
                 <span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
