--- a/views/main.html
+++ b/views/main.html
@@ -27,12 +27,12 @@
 
             <!-- TODO -->
             <!-- I will set 2 status of page when login and not login -->
-            <a class="navbar-brand" href="#" style = "margin-left: 1%">You are not logged in!</a>
+            <a class="navbar-brand" href="#" style = "margin-left: 1%" id = "displayUsername"></a>
 
             <div id = "navbar" class = "navbar-right">
                 <ul class = "nav navbar-nav">
-                  <li><a href="/login">Login</a></li>
-                  <li><a href="/signup">Sign Up</a></li>
+                  <li><a href="./views/login.html">Login</a></li>
+                  <li><a href="./views/signup.html">Sign Up</a></li>
                 </ul>
             </div>
 
@@ -42,6 +42,8 @@
   <p>
       Content of main page wil be here
   </p>
+
+  <script src = "../scripts/displayUsername.js"></script>
 
   </body>
 
