--- a/views/mypage.html
+++ b/views/mypage.html
@@ -30,8 +30,8 @@
             <a class="navbar-brand" href="#" style = "margin-left: 1%">Welcome</a>
             <div id = "navbar" class = "navbar-right">
                 <ul class = "nav navbar-nav">
-                  <li><a href="/newpost">Write new thread</a></li>
-                  <li><a href="/logout">Logout</a></li>
+                  <li><a href="./views/newpost.html">Write new thread</a></li>
+                  <li><a href="./views/logout.html">Logout</a></li>
                 </ul>
             </div>
 
