#5 redirect page after signup

--- a/views/signup.html
+++ b/views/signup.html
@@ -58,7 +58,7 @@
 
 
             <button class = "btn btn-primary" type = "submit" style = "margin-top: 1%">Sign up</button>
-            <a href = "./views/login.html" class = "btn btn-primary" style = "margin-top: 1%">Or already have account?</a>
+            <a href = "./login.html" class = "btn btn-primary" style = "margin-top: 1%">Or already have account?</a>
 
           </form>
         </div>
