switch feature when user login or not

--- a/views/main.html
+++ b/views/main.html
@@ -30,9 +30,7 @@
             <a class="navbar-brand" href="#" style = "margin-left: 1%" id = "displayUsername"></a>
 
             <div id = "navbar" class = "navbar-right">
-                <ul class = "nav navbar-nav">
-                  <li><a href="./views/login.html">Login</a></li>
-                  <li><a href="./views/signup.html">Sign Up</a></li>
+                <ul class = "nav navbar-nav" id = "switchNavTab">
                 </ul>
             </div>
 
@@ -43,7 +41,7 @@
       Content of main page wil be here
   </p>
 
-  <script src = "../scripts/displayUsername.js"></script>
+  <script src = "../scripts/mainScripts.js"></script>
 
   </body>
 
