--- a/views/myinfo.html
+++ b/views/myinfo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title> My page </title>
+    <title> My info </title>
 
     <!-- Latest compiled and minified CSS of Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
 
             <!-- TODO -->
             <!-- I will set 2 status of page when login and not login -->
-            <a class="navbar-brand" href="#" style = "margin-left: 1%">Welcome</a>
+            <a class="navbar-brand" href="#" style = "margin-left: 1%" id = "displayUsername"></a>
             <div id = "navbar" class = "navbar-right">
                 <ul class = "nav navbar-nav">
                   <li><a href="./views/newpost.html">Write new thread</a></li>
@@ -41,6 +41,8 @@
   <p>
       Your info will be here
   </p>
+
+  <script src = "../scripts/myinfoScripts.js"></script>
 
   </body>
 
