--- a/views/myinfo.html
+++ b/views/myinfo.html
@@ -31,7 +31,7 @@
             <div id = "navbar" class = "navbar-right">
                 <ul class = "nav navbar-nav">
                   <li><a href="./views/newpost.html">Write new thread</a></li>
-                  <li><a href="./views/logout.html">Logout</a></li>
+                  <li><a href="/logout">Logout</a></li>
                 </ul>
             </div>
 
