--- a/views/newpost.html
+++ b/views/newpost.html
@@ -29,6 +29,11 @@
             <!-- I will set 2 status of page when login and not login -->
             <a class="navbar-brand" href="#" style = "margin-left: 1%" id = "displayUsername"></a>
 
+            <div id = "navbar" class = "navbar-right">
+                <ul class = "nav navbar-nav" id = "switchNavTab">
+                </ul>
+            </div>
+
         </div>
     </nav>
 
