--- a/views/newpost.html
+++ b/views/newpost.html
@@ -42,8 +42,8 @@
             <form method = "post">
                 <h2>Title:</h2>
                 <input type = "text" name = "title" size = "100"><br><br>
-                <h2>Blog entry:</h2>
-                <textarea name = "blogEntry" cols = "101" rows = "10"></textarea><br><br>
+                <h2>Thread entry:</h2>
+                <textarea name = "entry" cols = "101" rows = "10"></textarea><br><br>
 
                 <h2>Tags</h2>
 		            <p><em>Comma separated, please</em></p>
