#10 show all thread to main page

--- a/views/main.html
+++ b/views/main.html
@@ -7,6 +7,12 @@
 
     <title> ROZ Forum </title>
 
+    <style>
+        table,th,td {
+            border: 1px solid white;
+        }
+    </style>
+
     <!-- Latest compiled and minified CSS of Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
@@ -37,9 +43,16 @@
         </div>
     </nav>
 
-  <p id = "displayThread">
-      Content of main page wil be here
-  </p>
+  <table width = "80%" style = "margin-left: 10%; margin-top: 2%">
+      <tr style = "background-color: #2D90EC; color: white">
+          <th width = "10%">Tag</th>
+          <th width = "60%">Thread title</th>
+          <th width = "10%">Upvote </th>
+          <th width = "10%">Comments </th>
+          <th witdh = "10%">Author </th>
+      </tr>
+      <table width = "80%" id = "displayThread" style = "margin-left: 10%;color : #1A5892"></table>
+  </table>
 
   <script src = "../scripts/mainScripts.js"></script>
 
