#13 finishing upvote feature

--- a/views/main.html
+++ b/views/main.html
@@ -46,8 +46,8 @@
       <tr style = "background-color: #2D90EC; color: white">
           <th width = "10%">Tag</th>
           <th width = "60%">Thread title</th>
-          <th width = "10%">Upvote </th>
-          <th width = "10%">Comments </th>
+          <th class="text-center" width = "10%">Upvote </th>
+          <th class="text-center" width = "10%">Comments </th>
           <th witdh = "10%">Author </th>
       </tr>
       <table width = "80%" id = "displayThread" style = "margin-left: 10%;color : #1A5892"></table>
