--- a/views/myinfo.html
+++ b/views/myinfo.html
@@ -7,9 +7,14 @@
 
     <title> My info </title>
 
+    <style>
+        table,th,td {
+            border: 1px solid white;
+        }
+    </style>
+
     <!-- Latest compiled and minified CSS of Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/main.css">
 
   </head>
 
@@ -29,18 +34,16 @@
             <!-- I will set 2 status of page when login and not login -->
             <a class="navbar-brand" href="#" style = "margin-left: 1%" id = "displayUsername"></a>
             <div id = "navbar" class = "navbar-right">
-                <ul class = "nav navbar-nav">
-                  <li><a href="./views/newpost.html">Write new thread</a></li>
-                  <li><a href="/logout">Logout</a></li>
+                <ul class = "nav navbar-nav" id = "switchNavTab">
                 </ul>
             </div>
 
         </div>
     </nav>
 
-  <p>
-      Your info will be here
-  </p>
+  <table width = "80%" id = "displayThread" style = "margin-left: 10%; margin-top: 2%">
+
+  </table>
 
   <script src = "../scripts/myinfoScripts.js"></script>
 
