--- a/views/main.html
+++ b/views/main.html
@@ -34,6 +34,13 @@
             <!-- I will set 2 status of page when login and not login -->
             <a class="navbar-brand" href="#" style = "margin-left: 1%" id = "displayUsername"></a>
 
+            <form class="navbar-form navbar-left" role="search" method = "post">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+              </div>
+              <button type="submit" class="btn"><span class="glyphicon glyphicon-search"></span></button>
+            </form>
+
             <div id = "navbar" class = "navbar-right">
                 <ul class = "nav navbar-nav" id = "switchNavTab">
                 </ul>
