--- a/views/main.html
+++ b/views/main.html
@@ -34,9 +34,9 @@
             <!-- I will set 2 status of page when login and not login -->
             <a class="navbar-brand" href="#" style = "margin-left: 1%" id = "displayUsername"></a>
 
-            <form class="navbar-form navbar-left" role="search" method = "post">
+            <form class="navbar-form navbar-left" role="search" method = "post" action="/filter">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text" name="tags" class="form-control" placeholder="Search">
               </div>
               <button type="submit" class="btn"><span class="glyphicon glyphicon-search"></span></button>
             </form>
