--- a/views/filter.html
+++ b/views/filter.html
@@ -1,6 +1,57 @@
-<body>
+<!DOCTYPE html>
+<html lang = "en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <p>
-        this is filter page
-      </p>
-</body>
+    <title> ROZ Forum </title>
+
+    <style>
+        table,th,td {
+            border: 1px solid white;
+        }
+    </style>
+
+    <!-- Latest compiled and minified CSS of Bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+  </head>
+
+  <body>
+    <nav class = "navbar navbar-inverse">
+        <div class = "container">
+
+            <div class = "navbar-header">
+                <a class="navbar-brand" href="#">ROZ Forum</a>
+            </div>
+
+            <ul class = "nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+            </ul>
+
+            <!-- TODO -->
+            <!-- I will set 2 status of page when login and not login -->
+            <a class="navbar-brand" href="#" style = "margin-left: 1%" id = "displayUsername"></a>
+
+            <form class="navbar-form navbar-left" role="search" method = "post" action="/filter">
+              <div class="form-group">
+                <input type="text" name="tags" class="form-control" placeholder="Search">
+              </div>
+              <button type="submit" class="btn"><span class="glyphicon glyphicon-search"></span></button>
+            </form>
+
+            <div id = "navbar" class = "navbar-right">
+                <ul class = "nav navbar-nav" id = "switchNavTab">
+                </ul>
+            </div>
+
+        </div>
+    </nav>
+
+
+  <script src = "../scripts/filter.js"></script>
+
+  </body>
+
+</html>
