#14 number of post found by a filter

--- a/views/filter.html
+++ b/views/filter.html
@@ -49,8 +49,11 @@
         </div>
     </nav>
 
+    <table width = "80%" style = "margin-left: 10%; margin-top: 2%" id = "displayThread">
+    </table>
 
-  <script src = "../scripts/filter.js"></script>
+
+  <script src = "../scripts/filterScripts.js"></script>
 
   </body>
 
