--- a/views/signup.html
+++ b/views/signup.html
@@ -37,6 +37,13 @@
                     <li class="active"><a href="/">Home</a></li>
                 </ul>
 
+                <form class="navbar-form navbar-left" role="search" method = "post" action="/filter">
+                  <div class="form-group">
+                    <input type="text" name="tags" class="form-control" placeholder="Search">
+                  </div>
+                  <button type="submit" class="btn"><span class="glyphicon glyphicon-search"></span></button>
+                </form>
+
             </div>
         </nav>
 
